force-app/main/default/objects/Kargo__c/fields/Agirlik__c.field-meta.xml
<CustomField>
    <fullName>Agirlik__c</fullName>
    <label>Agirlik</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>