force-app/main/default/objects/Kargo__c/fields/Konteyner__c.field-meta.xml
<CustomField>
    <fullName>Konteyner__c</fullName>
    <label>Konteyner</label>
    <referenceTo>Konteyner__c</referenceTo>
    <relationshipLabel>Kargolar</relationshipLabel>
    <relationshipName>Kargolar</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>