force-app/main/default/objects/Kargo__c/fields/Musteri__c.field-meta.xml
<CustomField>
    <fullName>Musteri__c</fullName>
    <label>Musteri</label>
    <referenceTo>Musteri__c</referenceTo>
    <relationshipLabel>Kargolar</relationshipLabel>
    <relationshipName>Kargolar</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>